--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Portfolio of My Name</title>
+	<title>Evelyn Marino's Website</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   <meta charset="UTF-8" />
@@ -12,22 +12,34 @@
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<!-- Experiment-specifc CSS file for any special styling of this particular page -->
 	<link rel="stylesheet" type="text/css" href="css/homepage.css">
+	
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
 	<script type="text/javascript" src="./js/experiment.js"></script>
 </head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/experiment.css -->
 	<main id="content">
-        <h1>Portfolio of My Name</h1>
+        <h1>Evelyn Marino</h1>
 		<section class="two-column">
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
                     <div class="image-wrapper">
-                        <img class="cat-photo" src="./img/cute-grey-kitten.jpg">
+                        <img class="evelyn-photo" src="./img/evelyn-pic.jpg">
                     </div>
+				</div>
+
+				<div class = "minor-section">
 					<h2>About Me</h2>
-					<p>Tell us about yourself. Add photos. Customize this. Go crazy.</p>
-			</div>
+					<p>Hi, I’m Evelyn, a Computer Science: Game Design student at UC Santa Cruz. I’m passionate about creating engaging games and currently developing my skills in JavaScript. Alongside game development, I enjoy animation and drawing, and I’m excited to continue exploring the creative and technical sides of game design throughout my time at UCSC.</p>
+					<p> 
+				
+					</p>
+					<p> Feel free to check out some of my previous projects! Some are still being expanded upon but here are some of my favorites:  </p>
+				</div>
+
             <div class="minor-section">
                 <h2>Links to Experiments</h2>
                 <ul>
@@ -40,6 +52,7 @@
 		</section>
 		<nav id="links">
 			<!-- Put links to experiments here. -->
+			 
 		</nav>
 	</main>
 </body>
