adding links and adjusting columns

--- a/index.html
+++ b/index.html
@@ -24,21 +24,25 @@
 	<main id="content">
         <h1>Evelyn Marino</h1>
 		<section class="two-column">
-			<div class="minor-section">
-					<!-- Note that all filenames use lowercase and no spaces -->
-                    <div class="image-wrapper">
-                        <img class="evelyn-photo" src="./img/evelyn-pic.jpg">
-                    </div>
+			<div class="image-section">
+				<!-- Note that all filenames use lowercase and no spaces -->
+                <div class="image-wrapper">
+					<div>
+                    <img class="evelyn-photo" src="./img/evelyn-pic.jpg">
+					<p class="image-link"> 
+					<a href="https://github.com/evmarino " target="_blank">GitHub |</a>
+					<a href="https://www.linkedin.com/in/evelyn-marino-castro-307b48259/" target="_blank">LinkedIn |</a>
+					<a href="https://evelynmarino.itch.io/" target="_blank"> Itch.io|</a>
+					<a href="https://evmarino.github.io/DigChamps/" target="_blank"> Latest Project|</a>
+				</p>
 				</div>
+                </div>
+			</div>
 
-				<div class = "minor-section">
-					<h2>About Me</h2>
-					<p>Hi, I’m Evelyn, a Computer Science: Game Design student at UC Santa Cruz. I’m passionate about creating engaging games and currently developing my skills in JavaScript. Alongside game development, I enjoy animation and drawing, and I’m excited to continue exploring the creative and technical sides of game design throughout my time at UCSC.</p>
-					<p> 
-				
-					</p>
-					<p> Feel free to check out some of my previous projects! Some are still being expanded upon but here are some of my favorites:  </p>
-				</div>
+			<div class="minor-section">
+				<h2>About Me</h2>
+				<p>Hi, I’m Evelyn, a Computer Science: Game Design student at UC Santa Cruz. I’m passionate about creating engaging games and currently developing my skills in JavaScript. Alongside game development, I enjoy animation and drawing, and I’m excited to continue exploring the creative and technical sides of game design throughout my time at UCSC.</p>
+			</div>
 
             <div class="minor-section">
                 <h2>Links to Experiments</h2>
@@ -48,11 +52,10 @@
                     <li><a href="./experiment3/index.html">Experiment 3</a></li>
                 </ul>
             </div>
-
 		</section>
 		<nav id="links">
 			<!-- Put links to experiments here. -->
-			 
+	
 		</nav>
 	</main>
 </body>
