adding glitch link

--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -56,6 +56,7 @@
 		<nav id="links" class="minor-section">
 			<ul>
 				<li><a href="../index.html">Home</a></li>
+				<li><a href="https://fig-tree-chaos.glitch.me">Translated from Glitch.com</a></li>
 			</ul>
 		</nav>
 	</main>
