--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h2>Links to Experiments</h2>
                 <ul>
                     <li><a href="./experiment1/index.html">Experiment 1: Fig Tree Chaos</a></li>
-                    <li><a href="./experiment2/index.html">Experiment 2</a></li>
+                    <li><a href="./experiment2/index.html">Experiment 2: Cherry Blossom Landscape</a></li>
                     <li><a href="./experiment3/index.html">Experiment 3</a></li>
                 </ul>
             </div>
