--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
             <div class="minor-section">
                 <h2>Links to Experiments</h2>
                 <ul>
-                    <li><a href="./experiment1/index.html">Experiment 1: Fig Tree Chaos</a></li>
-                    <li><a href="./experiment2/index.html">Experiment 2: Cherry Blossom Generative Landscape</a></li>
-                    <li><a href="./experiment3/index.html">Experiment 3</a></li>
+                    <li><a href="./experiment1/index.html">Experiment 1: Fig Tree Chaos	</a></li>
+                    
+					<li><a href="./experiment2/index.html">Experiment 2: Cherry Blossom Generative Landscape</a></li>
+                   
+					<li><a href="./experiment3/index.html">Experiment 3: Alternate Worlds; Dungeons and Rivers</a></li>
                 </ul>
             </div>
 		</section>
