trying to implement experiment 4

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 					<li><a href="./experiment2/index.html">Experiment 2: Cherry Blossom Generative Landscape</a></li>
                    
 					<li><a href="./experiment3/index.html">Experiment 3: Alternate Worlds; Dungeons and Rivers</a></li>
+
+					<li><a href="./experiment4/index.html">Experiment 4: Three Infinite Worlds</a></li>
                 </ul>
             </div>
 		</section>
