--- a/experiment4/index.html
+++ b/experiment4/index.html
@@ -5,7 +5,7 @@
   <title>Experiment 4</title>
 
  
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="js/style.css" />
 
   
   
