--- a/experiment3/index.html
+++ b/experiment3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment 3 - Alternative Worlds/title>
+	<title>Experiment 3 - Alternative Worlds/title></title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -32,9 +32,7 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/experiment.css -->
 	<main id="content">
 		<section>
-
 			<h1>Experiment 3 - Alternate Worlds</h1>
-
 			<div class="minor-section">
 				<div id="canvas-container">
 					<!-- canvas will be added here -->
