--- a/experiment4/index.html
+++ b/experiment4/index.html
@@ -67,7 +67,7 @@
     
     <nav id="Links" class="minor-section">
       <ul>
-        <li><a href="..index.html/">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
       </ul>
     </nav>
   </main>
