--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
 					<li><a href="./experiment4/index.html">Experiment 4: Three Infinite Worlds</a></li>
 					
 					<li><a href ="./experiment5/index.html">Experiment 5:Evolutionary Impressions</a></li>
+
+					<li><a href ="./experiment6/index.html">Experiment 6: Group Project Final: R.E.A.L Planet</a></li>
                 </ul>
             </div>
 		</section>
 		<nav id="links">
-			<!-- Put links to experiments here. -->
+			
 	
 		</nav>
 	</main>
